test/data/semantic-errors/unsupported-mixed-types.ava
3 * "t";
true * "t";